# rusty-nn

./: Cargo.toml  README.md
benches/: general_performance.rs
examples/: sin_fitting.rs
src/: a_funcs.rs  activation_functions.rs  allocator.rs  default_trainer.rs  helpers.rs  initializer.rs  lib.rs  loss.rs  loss_funcs.rs  misc.rs  network.rs  optimizer.rs  serde.rs  storage.rs  trainer.rs
src/layers/: dense_layer.rs  input_layer.rs  map_layer.rs  mod.rs  norm_layer.rs
src/network/: construction.rs  feed_forward.rs  mod.rs
src/optimizer/: adam.rs  gradient_descent.rs  mod.rs
src/trainer/: logger.rs  mod.rs  processor.rs  stochaistic.rs
tests/: common.rs  convergence_test.rs  save_and_load.rs
