[package]
name = "rusty-nn"
version = "0.1.0"
authors = [""]
edition = "2018"


[dependencies]
rand = {version = "0.7.3", features = ["small_rng"]}
rand_distr = "0.3"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
enum_dispatch = "0.3.3"
small_table = {git = "https://github.com/Krafi2/small-table.git", branch = "main"}
packed_simd = "0.3.3"
anyhow = "1.0.32"