[package]
name = "rusty-nn"
version = "0.1.0"
authors = [""]
edition = "2018"


[dependencies]
rand = {version = "0.7.3", features = ["small_rng"]}
rand_pcg = "0.2.1"
rand_distr = "0.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
enum_dispatch = "0.3.4"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
anyhow = "1.0.34"